# CSCE435_Project_2024

./: .gitignore  README.md  Report.md  columnsort  columnsort.cpp
Cali_Files/: column-random-p4-a16.cali  merge-p4-a16.cali  p3_2-16.cali
Cali_Files/Bitonic/: bitonic-random-p4-a16.cali  bitonic-reverse-p2-a26.cali
Cali_Files/Bitonic/bitonic-perturbed/: bitonic-perturbed-p1024-a18.cali  bitonic-perturbed-p1024-a20.cali  bitonic-perturbed-p1024-a22.cali  bitonic-perturbed-p1024-a26.cali  bitonic-perturbed-p1024-a28.cali  bitonic-perturbed-p128-a16.cali  bitonic-perturbed-p128-a18.cali  bitonic-perturbed-p128-a20.cali  bitonic-perturbed-p128-a22.cali  bitonic-perturbed-p128-a24.cali  bitonic-perturbed-p128-a26.cali  bitonic-perturbed-p128-a28.cali  bitonic-perturbed-p16-a16.cali  bitonic-perturbed-p16-a18.cali  bitonic-perturbed-p16-a20.cali  bitonic-perturbed-p16-a22.cali  bitonic-perturbed-p16-a24.cali  (+51 more)
Cali_Files/Merge/: merge-128-p16-asorted.cali  merge-16-p16-aperturbed.cali  merge-16-p16-arandom.cali  merge-16-p16-areverse.cali  merge-16-p16-asorted.cali  merge-2-p16-aperturbed.cali  merge-2-p16-arandom.cali  merge-2-p16-areverse.cali  merge-2-p16-asorted.cali  merge-2-p18-asorted.cali  merge-256-p16-asorted.cali  merge-32-p16-aperturbed.cali  merge-32-p16-asorted.cali  merge-4-p16-aperturbed.cali  merge-4-p16-arandom.cali  merge-4-p16-areverse.cali  merge-4-p16-asorted.cali  merge-512-p16-asorted.cali  merge-64-p16-asorted.cali
Cali_Files/Radix/: radix-p4-a16.cali
Jupyter_Files/: bitonicsort-analysis.ipynb  columnsort_analysis.ipynb  mergesort_analysis.ipynb  presentation_analysis.ipynb  radixsort_analysis.ipynb  samplesort_analysis.ipynb
Jupyter_Files/.ipynb_checkpoints/: radixsort_analysis-checkpoint.ipynb
MPI_Builds/: CMakeLists.txt  autojob.sh  generate_data.cpp  generation-mpi.grace_job  main.cpp  merge.grace_job  mpi.grace_job  radix.grace_job  radixsort  radixsort.cpp  seq_validation.cpp  test_decentralized_generation.cpp  test_samplesort  test_sort_validation.cpp  validation-mpi.grace_job
MPI_Builds/algorithms/: bitonicsort.cpp  bitonicsort.h  columnsort.cpp  columnsort.h  mergesort.cpp  mergesort.h  radixsort.cpp  radixsort.h  samplesort.cpp  samplesort.h  sort_validation.cpp  sort_validation.h
MPI_Builds/new/perturbed/: autojob.sh
MPI_Builds/new/random/: radixsort
MPI_Builds/new/sorted/: radix-p512-a20.cali  radix-p512-a22.cali  radix-p512-a24.cali  radix-p512-a26.cali
MPI_Builds/src/: columnsort.cpp  columnsort.h  decentralized_generation.cpp  decentralized_generation.h  mergesort.h  radixsort.h  sort_validation.h
MPI_Builds/tests/: test_decentralized_generation.cpp  test_mergesort.cpp  test_samplesort.cpp  test_sort_validation.cpp
(+1328 files in other folders)
